src/objects/SCOM_Performance__c.object
<CustomObject>
    <fields>
        <fullName>Avg_Metric_Value__c</fullName>
        <label>Avg Metric Value</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Metric_Value__c</fullName>
        <label>Current Metric Value</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Key__c</fullName>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Metric_Value__c</fullName>
        <label>Max Metric Value</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <description>The value being measured with this record.</description>
        <label>Metric</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Metric_Value__c</fullName>
        <label>Min Metric Value</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monitor_Instance__c</fullName>
        <description>The drive on the asset being measured.</description>
        <label>Monitor Instance</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server__c</fullName>
        <label>Server</label>
        <referenceTo>SCOM_Server__c</referenceTo>
        <relationshipName>Performance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Realtime</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Baseline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Performance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Monitor_Instance__c</columns>
        <columns>Avg_Metric_Value__c</columns>
        <columns>Current_Metric_Value__c</columns>
        <columns>Min_Metric_Value__c</columns>
        <columns>Max_Metric_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPN-{000000000}</displayFormat>
        <label>SCOM Performance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>